--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
               <input type="number" id="advance" placeholder="Advance (₹)" value="0" />
             </div>
 
+            <!-- ✅ GST CHECKBOX -->
+            <div style="margin:10px 0;">
+              <label>
+                <input type="checkbox" id="applyGst" /> Apply GST (18%)
+              </label>
+            </div>
+
             <button type="submit">Generate Quotation</button>
           </form>
         </div>
