Remove GST checkbox

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             </div>
 
             <!-- ✅ GST CHECKBOX -->
-            <div style="margin:10px 0;">
+            <!-- <div style="margin:10px 0;">
               <label>
                 <input type="checkbox" id="applyGst" /> Apply GST (18%)
               </label>
-            </div>
+            </div> -->
 
             <button type="submit">Generate Quotation</button>
           </form>
